--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
             <version>15</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>2.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -97,7 +102,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                at.javatetris.project.javatetris/at.javatetris.project.javatetris.HelloApplication
+                                at.javatetris.project.javatetris/at.javatetris.project.javatetris.Main
                             </mainClass>
                         </configuration>
                     </execution>
