--- a/pom.xml
+++ b/pom.xml
@@ -95,12 +95,6 @@
             <artifactId>java-discord-rpc</artifactId>
             <version>2.0.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-shade-plugin</artifactId>
-            <version>3.3.0</version>
-            <type>maven-plugin</type>
-        </dependency>
     </dependencies>
 
     <build>
@@ -110,8 +104,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
+                    <source>18</source>
+                    <target>18</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -126,27 +120,25 @@
                             <mainClass>
                                 at.javatetris.project/at.javatetris.project.Main
                             </mainClass>
+                            <includePathExceptionsInClasspath>true</includePathExceptionsInClasspath>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
+                <groupId>io.github.makingthematrix</groupId>
+                <artifactId>scala-suffix-maven-plugin</artifactId>
+                <version>0.1.0</version>
+                <configuration>
+                    <libraries>
+                        <param>discord.rpc.release.v3.3.0</param>
+                    </libraries>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
-                            <goal>shade</goal>
+                            <goal>suffix</goal>
                         </goals>
-                        <configuration>
-                            <shadedArtifactAttached>true</shadedArtifactAttached>
-                            <transformers>
-                                <transformer implementation=
-                                                     "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>at.javatetris.project.Main</mainClass>
-                                </transformer>
-                            </transformers>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
